--- a/src/components/ForecastCard/ForecastCard.scss
+++ b/src/components/ForecastCard/ForecastCard.scss
@@ -1,4 +1,4 @@
-.forecast {
+.forecast__card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,22 +7,23 @@
   margin-right: 24px;
   border-radius: 6px;
 
-  &:hover, &.forecast--active {
+  &.forecast--active {
     background-color: #51557A;
   }
 
   &:hover {
+    background-color: #3B3F69;
     cursor: pointer;
   }
 
-  & .forecast__time {
+  & .forecast__card__time {
     color: #A8AABD;
     font-size: 48px;
     line-height: 56px;
     padding-top: 32px;
   }
 
-  & .forecast__condition {
+  & .forecast__card__condition {
     padding-top: 32px;
     
     & svg {
@@ -31,7 +32,7 @@
     }
   }
 
-  & .forecast__temperature {
+  & .forecast__card__temperature {
     font-weight: 700;
     font-size: 82px;
     line-height: 96px;
